--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 Reference: https://www.youtube.com/watch?v=fvcdcJMem-0
 
+===> Modify the file in the cofigure.ac ===> AC_INIT([hello], 1.0)
+===> Modify the Makefile.am file ===> pv_bin_***
+
 touch NEWS README AUTHORS ChangeLog
 autoreconf --installautoreconf --install
 ./configure
